# gammapyXray

./: README.md  setup.cfg  setup.py  tutorial.ipynb
gammapyXray/: io_ogip.py  models.py  ogip_spectrum_dataset.py
