[metadata]
name = gammapyXray
version = 0.1.0
author = Luca Giunti, Regis Terrier
author_email = giunti@apc.in2p3.fr, rterrier@apc.in2p3.fr
description = A Python tool for the analysis of Gamma-ray and X-ray data in a unified framework, using physically-motivated spectral models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/luca-giunti/gammapyXray
keywords = 
    Astronomy
    High-energy Astrohpysics
    Gamma-ray
    X-ray
    Multi-wavelength
    Gammapy
    Sherpa
    Naima
    Python
license = BSD-3-Clause
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    astropy
    gammapy>=1.0
    sherpa
    naima-package
    regions
    matplotlib
